--- a/conf/livy.conf
+++ b/conf/livy.conf
@@ -1,6 +1,6 @@
 livy.spark.master = yarn
 livy.spark.deployMode = cluster
-livy.file.local-dir-whitelist =/root/.livy-sessions/
+livy.file.local-dir-whitelist =/root/livy-local-files/
 livy.environment = production
 livy.impersonation.enabled = true
 livy.server.csrf_protection.enabled = true
